Add search feature using elasticsearch
