# config/routes.rb
@@ -9,8 +9,8 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       resources :chat_applications, param: :token, except: %i[destroy] do
-        resources :chats, param: :number, except: %i[destroy update show] do
-          resources :messages, param: :message_number, except: %i[destroy update show]
+        resources :chats, param: :number, only: %i[index create] do
+          resources :messages, param: :message_number, only: %i[index create]
         end
       end
     end
